--- a/src/components/scss/_stories.scss
+++ b/src/components/scss/_stories.scss
@@ -1,9 +1,14 @@
 .storiesList {
-  list-style: none;
-  margin: 0;
-  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-between;
+  align-content: flex-start;
+  width: 100%;
 }
 
 .storiesItem {
   margin: 2rem 0;
+  flex: 0 0 auto;
+  width: 100%;
 }
