feat(carousel component): add carousel component and styling
Contributes to, but doesn't close #92. Provides a generic carousel component that dynamically
populates content as they slide on screen.

--- a/src/components/scss/_variables.scss
+++ b/src/components/scss/_variables.scss
@@ -10,6 +10,7 @@ $color-sky: #EFF3FB;
 $color-vibrant-purple: #3739B5;
 $color-lilac: #D4D6FE;
 $color-grey: #C4C4C4;
+$color-grey4: #BDBDBD;
 
 $box-shadow: 0px 6px 14px rgba($color-blue, 0.2);
 
