--- a/src/components/scss/styles.scss
+++ b/src/components/scss/styles.scss
@@ -4,6 +4,7 @@
 @import "./stories";
 @import "./buttons";
 @import "./card";
+@import "./carousel";
 @import "./contact";
 @import "./custom_mixins";
 @import "./featureList";
